--- a/css/styles.css
+++ b/css/styles.css
@@ -11,21 +11,24 @@ body, div{
     background-color: gray;
     color: #ffffff;
     margin: 0;
-    padding: 2rem 0 2rem 0;
+    padding: 1rem 0 1rem 0;
     display: flex;
     width: 100vw;
-    flex-direction: column;
+    height: fit-content;
+    flex-direction: row;
+    justify-content: space-between;
     align-items: center;
 }
 
-#apple{
-    width: 100px;
-    height: 120px;
+.nav img{
+    width: 50px;
+    height: 60px;
+    margin: 0 2rem 0 2rem;
 }
 
 h2{
-    font-size: 10rem;
-    margin: 1rem;
+    font-size: 8rem;
+    margin: 7rem 1rem 0 1rem;
     font-weight: 100;
 }
 
@@ -36,7 +39,7 @@ h3{
 
 p{
     font-size: 4rem;
-    margin: 1rem;
+    margin: 0 1rem 7rem 1rem;
 }
 
 .black, .white{
@@ -64,4 +67,19 @@ p{
     display: flex;
     flex-direction: row;
     align-items: center;
+}
+
+footer{
+    background-color: gray;
+    color: #ffffff;
+    width: 100vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 1rem 0 1rem 0;
+    font-size: 3rem;
+}
+
+a{
+    margin-left: 2rem;
 }
